--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexKardone/vostokart.git"
+  },
   "author": "Alexander Matskevich",
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/AlexKardone/vostokart#readme",
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "browser-sync": "^2.26.3",
@@ -37,5 +40,8 @@
     "popper.js": "^1.14.6",
     "transformers": "^2.1.0"
   },
-  "keywords": []
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/AlexKardone/vostokart/issues"
+  }
 }
